# Grapho

./: .gitignore  LICENSE.txt  README.md
cg_resources/textures/Sun/: sun_1.xcf
cg_resources/textures/grass/: grass2.xcf  notes.txt
cg_resources/vertex/: test_box.mtl
files/: TODO.txt
files/Windows/: 1_build_dependencies_Win.bat  2_build_project_Win.bat  generateDoxygen.bat
files/old/: Ubuntu_build_all
files/others/: build_Win.bat
projects/: CMakeLists.txt
projects/Renderer/: CMakeLists.txt  Doxyfile  Grapho.url  TODO.txt
projects/Renderer/html/: annotated.html  camera_8hpp_source.html  classBinaryKey-members.html  classBinaryKey.html  classCamera-members.html  classCamera.html  classInput-members.html  classInput.html  classModelData-members.html  classModelData.html  classRenderer-members.html  classRenderer.html  classTexture-members.html  classTexture.html  classTimerSet-members.html  classTimerSet.html  classUBOtype-members.html  classUBOtype.html  classVertexSet-members.html  classVertexSet.html  classVertexType-members.html  classVertexType.html  classVulkanEnvironment-members.html  classVulkanEnvironment.html  classes.html  classifOnce-members.html  classifOnce.html  classnoiseSet-members.html  classnoiseSet.html  classterrainChunks-members.html  classterrainChunks.html  classterrainGenerator-members.html  classterrainGenerator.html  classtimer.html  data_8hpp_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  environment_8hpp_source.html  files.html  functions.html  functions_func.html  (+42 more)
projects/Renderer/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_3.js  classes_5.js  classes_6.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+19 more)
projects/Renderer/include/: ECSarch.hpp  camera.hpp  commons.hpp  data.hpp  environment.hpp  geometry.hpp  importer.hpp  input.hpp  loaddata.hpp  models.hpp  models.hpp.bak  models_2.hpp  noise.hpp  physics.hpp  renderer.hpp  texture.hpp  timer.hpp  toolkit.hpp  toolkit.hpp.bak  ubo.hpp  vertex.hpp  world.hpp
projects/Renderer/shaders/: compile.bat  triangleF.frag  triangleV.vert
projects/Renderer/shaders/GLSL/: f_hudPT.frag  f_linePC.frag  f_sunPT.frag  f_terrainPTN.frag  f_trianglePCT.frag  f_trianglePT.frag  lineV.vert  pointV.vert  triangleTF.frag  triangleTV.vert  triangleV.vert  v_hudPT.vert  v_linePC.vert  v_sunPT.vert  v_terrainPTN.vert  v_trianglePCT.vert
projects/Renderer/shaders/SPIRV/: f_terrainPTN.spv  v_hudPT.spv  v_linePC.spv  v_pointPC.spv  v_sunPT.spv  v_terrainPTN.spv
projects/Renderer/shaders/more/: axis.fs  icosahedron.fs  terrain.fs
projects/Renderer/src/: ECSarch.cpp  ECSarch.cpp.bak  camera.cpp  commons.cpp  data.cpp  environment.cpp  geometry.cpp  importer.cpp  input.cpp  loaddata.cpp  main.cpp  models.cpp  models.cpp.bak  models_2.cpp  physics.cpp  renderer.cpp  renderer.cpp.bak  terrain.cpp  texture.cpp  timer.cpp  toolkit.cpp  toolkit.cpp.bak  ubo.cpp  vertex.cpp
projects/Terrain/: CMakeLists.txt  TODO.txt  TODO.txt.bak
projects/Terrain/include/: common.hpp  components.hpp  entities.hpp  noise.hpp  systems.hpp  terrain.hpp
projects/Terrain/shaders/: compile_windows.bat  f_planetPTN.frag  f_postProc.frag  f_sea.frag  v_planetPTN.vert
projects/Terrain/shaders/GLSL/: atmosphere_f.frag  atmosphere_v.vert  basic_f.frag  basic_v.vert  f_atmosphere.frag  f_basic.frag  f_basicModel.frag  f_basic_332.frag  f_grass.frag  f_hudPT.frag  f_linePC.frag  f_noPP.frag  f_plainChunk.frag  f_planetChunk.frag  f_planetPTN.frag  f_planetSea.frag  f_postProc.frag  f_sea.frag  f_seaPlanet.frag  f_skybox.frag  f_sun.frag  f_template.frag  f_terrainPTN.frag  f_trianglePCT.frag  f_trianglePT.frag  fragTools.vert  lightingPass_f.frag  lightingPass_v.vert  planetChunk_f.frag  planetChunk_v.vert  postprocessing_f.frag  postprocessing_v.vert  seaPlanet_DR_f.frag  seaPlanet_FR_f.frag  seaPlanet_f.frag  seaPlanet_v.vert  skybox_f.frag  skybox_v.vert  sun_f.frag  sun_v.vert  (+24 more)
projects/Terrain/shaders/GLSL/DS/: f_basic.frag  f_lightingPass.frag  f_planetChunk.frag  v_basic.vert  v_lightingPass.vert  v_seaPlanet.vert
projects/Terrain/shaders/GLSL/DS/Copies/: f_lightingPass.frag  f_planetChunk.frag  f_seaPlanet.frag
projects/Terrain/shaders/GLSL/FS/: f_atmosphere.frag  f_grass.frag  f_lines.frag  f_seaPlanet.frag  f_skybox.frag  f_subject.frag  v_atmosphere.vert  v_basicModel.vert  v_grass.vert  v_hud.vert  v_points.vert  v_seaPlanet.vert  v_skybox.vert
projects/Terrain/shaders/GLSL/others/: template_f.frag
projects/Terrain/shaders/SPIRV/: f_atmosphere.spv  f_planetPTN.spv  f_sea.spv  f_terrainPTN.spv  v_atmosphere.spv  v_hudPT.spv  v_planetPTN.spv  v_sea.spv  v_terrainPTN.spv
projects/Terrain/shaders/more/: icosahedron.vs  sun.vs
projects/Terrain/src/: common.cpp  components.cpp  entities.cpp  main.cpp  main2.cpp  noise.cpp  systems.cpp  terrain.cpp
projects/lighting/: CMakeLists.txt
projects/lighting/include/: auxiliar.hpp  camera.hpp  canvas.hpp  geometry.hpp  global.hpp  myGUI.hpp
projects/lighting/shaders/: fragmentShader.fs  vertexShader.vs  vertexVec3_colorUnifVec4.fs  vertexVec3_colorUnifVec4.vs  vertexVec3_colorVec3.vs  vertexVec3_colorVec4_normalVec3.vs
projects/lighting/src/: auxiliar.cpp  camera.cpp  canvas.cpp  geometry.cpp  main.cpp  shader.cpp
projects/player/: CMakeLists.txt
projects/player/include/: auxiliar.hpp  camera.hpp  canvas.hpp  geometry.hpp  global.hpp  shader.hpp  timelib.hpp
projects/player/shaders/: sea.fs  sun.fs  terrain.vs
projects/player/src/: auxiliar.cpp  camera.cpp  canvas.cpp  geometry.cpp  main.cpp  myGUI.cpp  timelib.cpp  world.cpp
textures/Sun/: sun_1.xcf
textures/scope/: hensoldt-wetzlar-3x-magnifier-scope-k_1_74417bedefd2f0d9d5e4247952be020b.xcf
(+5 files in other folders)
